# snake_sim

./: .gitignore  MANIFEST.in  README.md  REWARD_ANALYSIS.md  REWARD_CHANGES.md  __init__.py  classes.py  default_config.json  default_config.py  main.py  mise.toml  pyproject.toml  reqs_ml.txt  requirements.txt  run_file4.data  setup.cfg  setup.py  snake.log.1  snake.log.2  snake_env.py  some_test.txt  terminal_overwrite_demo.py  test_area.txt  test_areacheck.txt  test_file.txt  test_run_file.txt  utils.py  visualize_rewards.py
docs/: snake_sim.drawio  system_design.drawio
models/: deep_strategy.pt
models/ppo_training/: ppo_model_step670.pt  ppo_model_step680.pt  ppo_model_step6880.pt  ppo_model_step6890.pt  ppo_model_step690.pt  ppo_model_step6900.pt  ppo_model_step6910.pt  ppo_model_step6920.pt  ppo_model_step700.pt  ppo_model_step710.pt  training_stats_20251119_193325.csv  training_stats_20251206_184258.csv
models/ppo_training_advanced/: training_stats_20251116_011434.csv  training_stats_20251116_022727.csv
models/ppo_training_fixed_death_penalty/: ppo_model_step23270.pt  ppo_model_step23280.pt  ppo_model_step23290.pt  ppo_model_step23300.pt  ppo_model_step23310.pt  training_stats_20251116_033051.csv  training_stats_20251116_033206.csv
models/ppo_training_higher_lr/: ppo_model_step1990.pt  ppo_model_step2000.pt  ppo_model_step2010.pt  ppo_model_step2020.pt  ppo_model_step2030.pt  training_stats_20251115_235707.csv
models/ppo_training_higher_lr_no_suicide/: training_stats_20251116_003225.csv  training_stats_20251116_004623.csv
models/ppo_training_lower_lr/: ppo_model_step4410.pt  ppo_model_step4420.pt  ppo_model_step4430.pt  ppo_model_step4440.pt  ppo_model_step4450.pt  training_stats_20251116_111818.csv  training_stats_20251116_120426.csv  training_stats_20251116_120557.csv
models/ppo_training_lower_lr_adv/: training_stats_20251116_120653.csv
models/ppo_training_mid/: ppo_model_step4930.pt  ppo_model_step4940.pt  ppo_model_step4950.pt  ppo_model_step4960.pt  ppo_model_step4970.pt  ppo_model_step7730.pt  ppo_model_step7740.pt  ppo_model_step7750.pt  ppo_model_step7760.pt  ppo_model_step7770.pt  training_stats_20251116_125227.csv
models/ppo_training_mid_action_mask/: ppo_model_step8650.pt  ppo_model_step8660.pt  ppo_model_step8670.pt  ppo_model_step8680.pt  ppo_model_step8690.pt  ppo_model_step8930.pt  ppo_model_step8940.pt  ppo_model_step8950.pt  ppo_model_step8960.pt  ppo_model_step8970.pt  training_stats_20251116_151726.csv  training_stats_20251116_152000.csv  training_stats_20251116_170000 copy.csv  training_stats_20251116_170000.csv  training_stats_20251116_173819.csv  training_stats_20251116_174440.csv  (+3 more)
render/: core.py  jsonEncoder.py  led_display_render.py  pygame_render.py  run_record.py  video_render.py
snake_sim/: cli.py  debugging.py  logging_setup.py  main.py  snake_env.py  utils.py
snakes/: autoSnake.py  autoSnake2.py  autoSnake3.py  autoSnake4.py  autoSnakeBase.py  dqnSnake.py  snake.py
(+310 files in other folders)
