[metadata]
name = snake_sim
version = 0.1.0
author = Jesper Fritsch
description = Just a hobby project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JesperFritsch/snake_sim
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pillow
    numpy
    opencv-python
    pygame
    pynput
    pybind11
    pyvirtualdisplay
    protobuf

python_requires = >=3.6
include_package_data = True

[options.package_data]
snake_sim =
    config/*
    maps/map_images/*

[options.entry_points]
console_scripts =
    snake_sim = snake_sim.main:main
