[metadata]
name = snake_sim
version = 0.1.0
author = Jesper Fritsch
description = Just a hobby project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JesperFritsch/snake_sim
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
install_requires =
    pillow
    numpy
    opencv-python
    pygame
    pynput
    pybind11
    pyvirtualdisplay
    protobuf
    tqdm
    grpcio-tools
    snake_proto_template @ git+ssh://git@github.com/JesperFritsch/snake_proto_template.git@main

python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = .
include = snake_sim*

[options.package_data]
snake_sim =
    config/*
    maps/map_images/*
    protobuf/*
    render/sounds/*

[options.entry_points]
console_scripts =
    snake-sim = snake_sim.main:main

[build_proto]
proto_files = snake_sim/protobuf/*.proto
output_path = ./
